# koji-vibebuild

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
ansible/: playbook.yml  requirements.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
ansible/roles/koji-builder/handlers/: main.yml
ansible/roles/koji-builder/tasks/: main.yml
ansible/roles/koji-builder/templates/: kojid.conf.j2  mock-koji.cfg.j2
ansible/roles/koji-hub/tasks/: generate_user_cert.yml  main.yml
ansible/roles/koji-hub/templates/: hub.conf.j2  kojihub.conf.j2  ssl.conf.j2
ansible/roles/koji-init/tasks/: main.yml
ansible/roles/koji-web/tasks/: main.yml
ansible/roles/koji-web/templates/: kojiweb.conf.j2  web.conf.j2
ansible/roles/postgresql/tasks/: main.yml
ansible/roles/postgresql/templates/: pg_hba.conf.j2
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LOCAL_SETUP.md  PROJECT_OVERVIEW.md  ROADMAP.md  TESTING.md  VPS_SETUP.md
scripts/: collect_training_data.py  train_model.py
tests/: conftest.py  test_analyzer.py  test_builder.py  test_cli.py  test_fetcher.py  test_ml_resolver.py  test_name_resolver.py  test_resolver.py
tests/fixtures/: complex-package.spec  test-package.spec
vibebuild/: __init__.py  __main__.py  analyzer.py  builder.py  cli.py  exceptions.py  fetcher.py  ml_resolver.py  name_resolver.py  resolver.py
vibebuild/data/: alias_training.json
